<resources>
    <string name="app_name">CodingChallenge22</string>
    <string name="add_item">Add Item</string>
    <string name="item_1">Sugar</string>
    <string name="item_2">Butter</string>
    <string name="item_3">Rice</string>
    <string name="item_4">Bean</string>
    <string name="item_5">Noodles</string>
    <string name="item_6">Banana</string>
    <string name="item_7">Apple</string>
    <string name="item_8">Yogurt</string>
    <string name="item_9">Cheese</string>
    <string name="item_10">Chicken</string>
    <string name="button_locate_store">Locate Store</string>
    <string name="store_text">Dierbergs</string>
</resources>
